--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Halloween Store</title>
-    <link rel="shortcut icon" href="./images/favicon.ico">
-    </link>
+    <link rel="shortcut icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
 </head>
